fix: 도커 이미지 빌드할 때 로컬에 있는 외부 설정 무시하도록 처리  (#47)
* fix: deprecated 된 API 교체

* fix: 도커 이미지 빌드하기 전 설정 파일 삭제