@@ -4,8 +4,8 @@ import io.github.daengdaenglee.mangurl.application.url.inboundport.EncodeUrlServ
 import org.springframework.stereotype.Service;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 // @TODO 단위 테스트 작성
 @Service
@@ -13,7 +13,7 @@ class EncodeUrlServiceImpl implements EncodeUrlService {
     @Override
     public boolean isValid(String url) {
         try {
-            new URL(url).toURI();
+            var ignored = new URI(url).toURL();
             return true;
         } catch (URISyntaxException | MalformedURLException e) {
             return false;
@@ -23,7 +23,9 @@ class EncodeUrlServiceImpl implements EncodeUrlService {
     @Override
     public String encode(String url) {
         try {
-            return new URL(url).toURI().toASCIIString();
+            var uri = new URI(url);
+            var ignored = uri.toURL();
+            return uri.toASCIIString();
         } catch (URISyntaxException | MalformedURLException e) {
             throw new IllegalArgumentException(e);
         }
